kubernasty/manifests/crust/keycloak/ingresses/keycloak.https.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-clusteradmin-auth-mw@kubernetescrd

spec:
  rules:
  - host: keycloak.kubernasty.micahrl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-keycloakx-http
            port:
              number: 8080
  tls:
    - secretName: keycloak-cert-backing-secret
      hosts:
        - keycloak.kubernasty.micahrl.com
