kubernasty/manifests/crust/keycloak/ingresses/oa2pwhoami.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oa2pwhoami-in
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-oauth2-proxy-mw@kubernetescrd
spec:
  rules:
    - host: oa2pwhoami.keycloak.kubernasty.micahrl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tfawhoami
                port:
                  number: 5678
  tls:
    - secretName: oa2pwhoami-cert-backing-secret
      hosts:
        - oa2pwhoami.keycloak.kubernasty.micahrl.com
