kubernasty/manifests/crust/keycloak/ingresses/oauth2-proxy.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-in
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
spec:
  rules:
    - host: oauth2-proxy.kubernasty.micahrl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
  tls:
    - secretName: oauth2-proxy-cert-backing-secret
      hosts:
        - oauth2-proxy.kubernasty.micahrl.com
