kubernasty/manifests/crust/keycloak/ingresses/tfa.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-forward-auth-in
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
    # This should not be required since
    # <https://github.com/thomseddon/traefik-forward-auth/pull/217>
    # However, as of SUPERBOWL SUNDAY 20230212 this requires using the `:latest` tag of the container...
    # the recommendedd `:2` tag is too old!
    # traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth-mw@kubernetescrd
spec:
  rules:
    - host: traefik-forward-auth.kubernasty.micahrl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-forward-auth
                port:
                  number: 4181
  tls:
    - secretName: traefik-forward-auth-cert-backing-secret
      hosts:
        - traefik-forward-auth.kubernasty.micahrl.com
