kubernasty/manifests/crust/keycloak/ingresses/tfawhoami.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tfawhoami-in
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-forward-auth:4181
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: tfawhoami.keycloak.kubernasty.micahrl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tfawhoami
                port:
                  number: 5678
  tls:
    - secretName: tfawhoami-cert-backing-secret
      hosts:
        - tfawhoami.keycloak.kubernasty.micahrl.com
